# TrafficLight

./: .TrafficLight  .cproject  .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Jenkinsfile  TrafficLight.qm  buildall.sh  buildall2.sh  buildlinux.sh  buildprj.cfg  buildprj.py  patch_compile_commands_json.py
Source/: CMakeLists.txt  CMakePresets.json  TLblinker.c  TLbutton.c  TLmain.c  TLpedestrian.c  TLtraffic.c  bsp.h  buildall2.sh  main.c  misra.json  misra.json.in  patch_compile_commands_json.py  stm32f091.ld.in  stm32f091.sct.in  stm32f091_sect.ld.in  systicktst.c  trafficlight.h
Source/BSP/: CMakeLists.txt  bsp-common.c  bsp-gui.h  bsp.h
Source/BSP/Arm/: .mxproject  CMakeLists.txt  TrafficLight.ioc  bsp-pico.c  bsp.c  stm32f091_sect.ld
Source/BSP/Arm/Drivers/STM32F0xx_HAL_Driver/Src/: CMakeLists.txt
Source/BSP/Arm/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Source/BSP/Arm/Res/: LedRed.xpm  LightRed.xpm  LightYellow.xpm  seg1.xpm  trafficLight.xml
Source/BSP/Arm/Src/: CMakeLists.txt  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Source/BSP/Arm/TrafficLight/: CMakeLists.txt  startup_stm32f091xc.c
Source/BSP/Arm/TrafficLight/SW4STM32/: CMakeLists.txt  startup_stm32f091xc.S  startup_stm32f091xc.c  syscalls.c
Source/BSP/Arm/TrafficLight/cmake/: gcc-arm-none-eabi.cmake
Source/BSP/Arm/TrafficLight/cmake/stm32cubemx/: CMakeLists.txt
Source/BSP/Console/: CMakeLists.txt  bsp-qutest.c  bsp.c
Source/BSP/Linux_Console/: CMakeLists.txt  bsp.c
Source/BSP/Pico/: CMakeLists.txt  bsp.c
Source/BSP/Raspi/: CMakeLists.txt  bsp-gui.c  bsp-gui.h  bsp.c
Source/BSP/Raspi/Res/: LightOff.xpm  seg2.xpm  seg5.xpm  seg8.xpm  trafficLight.gresource.xml
Source/BSP/Windows/: .gitignore  CMakeLists.txt  bsp-gtk.c  bsp-gui.c  bsp.c  resources.c
Source/GTK+/: bsp-gui.c  bsp.c  paths.xml  trafficLight.xml
Source/GTK+/Res/: seg3.xpm  seg7.xpm
Source/QM/: .TrafficLight  TrafficLight.qm  TrafficLight.qms
Source/QM/Source/: CMakeLists.txt  TLblinker.c  TLmain.c  TLpedestrian.c  TLtraffic.c  trafficlight.h
Source/Tool/: cppcheck.c
Source/Win32_Console/: bsp.c
Source/Win32_Gui/: bsp.c  resource.h  trafficlight-gui.rc
Source/arm-cm/: TrafficLight.ioc  bsp.c  trafficlight-qk.ld
Source/arm-cm/trafficLight/: trafficLight.ioc
Source/arm-cm/trafficLight/CMSIS/Include/: arm_common_tables.h  arm_const_structs.h  arm_math.h  core_cm0.h  core_cm0plus.h  core_cm3.h  core_cm4.h  core_cm7.h  core_cmFunc.h  core_cmInstr.h  core_cmSimd.h  core_sc000.h  core_sc300.h  stm32f030x6.h  stm32f030x8.h  stm32f030xc.h  stm32f031x6.h  stm32f038xx.h  stm32f042x6.h  stm32f048xx.h  stm32f051x8.h  stm32f058xx.h  stm32f070x6.h  stm32f070xb.h  stm32f071xb.h  stm32f072xb.h  stm32f078xx.h  stm32f091xc.h  stm32f098xx.h  stm32f0xx.h
Source/arm-cm/trafficLight/CMSIS/Source/: startup_stm32f091xc.S  system_stm32f0xx.c
Source/arm-cm/trafficLight/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Source/arm-cm/trafficLight/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_hal.h  stm32f0xx_hal_adc.h  stm32f0xx_hal_adc_ex.h  stm32f0xx_hal_can.h  stm32f0xx_hal_cec.h  stm32f0xx_hal_comp.h  stm32f0xx_hal_conf_template.h  stm32f0xx_hal_cortex.h  stm32f0xx_hal_crc.h  stm32f0xx_hal_crc_ex.h  stm32f0xx_hal_dac.h  stm32f0xx_hal_dac_ex.h  stm32f0xx_hal_def.h  stm32f0xx_hal_dma.h  stm32f0xx_hal_dma_ex.h  stm32f0xx_hal_flash.h  stm32f0xx_hal_flash_ex.h  stm32f0xx_hal_gpio.h  stm32f0xx_hal_gpio_ex.h  stm32f0xx_hal_i2c.h  stm32f0xx_hal_i2c_ex.h  stm32f0xx_hal_i2s.h  stm32f0xx_hal_irda.h  stm32f0xx_hal_irda_ex.h  stm32f0xx_hal_iwdg.h  stm32f0xx_hal_pcd.h  stm32f0xx_hal_pcd_ex.h  stm32f0xx_hal_pwr.h  stm32f0xx_hal_pwr_ex.h  stm32f0xx_hal_rcc.h  stm32f0xx_hal_rcc_ex.h  stm32f0xx_hal_rtc.h  stm32f0xx_hal_rtc_ex.h  stm32f0xx_hal_smartcard.h  stm32f0xx_hal_smartcard_ex.h  stm32f0xx_hal_smbus.h  stm32f0xx_hal_spi.h  stm32f0xx_hal_spi_ex.h  stm32f0xx_hal_tim.h  stm32f0xx_hal_tim_ex.h  (+27 more)
Source/arm-cm/trafficLight/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal.c  stm32f0xx_hal_adc.c  stm32f0xx_hal_adc_ex.c  stm32f0xx_hal_can.c  stm32f0xx_hal_cec.c  stm32f0xx_hal_comp.c  stm32f0xx_hal_cortex.c  stm32f0xx_hal_crc.c  stm32f0xx_hal_crc_ex.c  stm32f0xx_hal_dac.c  stm32f0xx_hal_dac_ex.c  stm32f0xx_hal_dma.c  stm32f0xx_hal_flash.c  stm32f0xx_hal_flash_ex.c  stm32f0xx_hal_gpio.c  stm32f0xx_hal_i2c.c  stm32f0xx_hal_i2c_ex.c  stm32f0xx_hal_i2s.c  stm32f0xx_hal_irda.c  stm32f0xx_hal_iwdg.c  stm32f0xx_hal_msp_template.c  stm32f0xx_hal_pcd.c  stm32f0xx_hal_pcd_ex.c  stm32f0xx_hal_pwr.c  stm32f0xx_hal_pwr_ex.c  stm32f0xx_hal_rcc.c  stm32f0xx_hal_rcc_ex.c  stm32f0xx_hal_rtc.c  stm32f0xx_hal_rtc_ex.c  stm32f0xx_hal_smartcard.c  stm32f0xx_hal_smartcard_ex.c  stm32f0xx_hal_smbus.c  stm32f0xx_hal_spi.c  stm32f0xx_hal_spi_ex.c  stm32f0xx_hal_tim.c  stm32f0xx_hal_tim_ex.c  stm32f0xx_hal_timebase_rtc_alarm_template.c  stm32f0xx_hal_timebase_rtc_wakeup_template.c  stm32f0xx_hal_timebase_tim_template.c  stm32f0xx_hal_tsc.c  (+5 more)
Source/arm-cm/trafficLight/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Source/cmake/: CMakeCPack.cmake  CodeCoverage.cmake  arm.cmake  armcc.cmake  armgnu.cmake  cppcheck.cmake  createTgtCpl.cmake  createTgtCpl.sh  custom_commands.cmake  pico_sdk_import.cmake  unix.cmake  win32.cmake
Source/include/: bsp-gui.h  bsp.h  qp_config.h  trafficlight.h
Source/posix/: bsp.c
Source/qpc/: CMakeLists.txt
Source/qpc/include/: qassert.h  qep.h  qequeue.h  qf.h  qf_pkg.h  qk.h  qmpool.h  qpc.h  qs.h  qs_dummy.h  qs_pkg.h  qv.h  qxk.h
Source/qpc/ports/arm-cm/qk/arm/: CMakeLists.txt
Source/qpc/ports/posix/: CMakeLists.txt
Source/qpc/ports/posix-qk/: CMakeLists.txt
Source/qpc/ports/posix-qutest/: CMakeLists.txt
Source/qpc/ports/posix-qv/: CMakeLists.txt
Source/qpc/ports/win32/: CMakeLists.txt
Source/qpc/ports/win32-qk/: CMakeLists.txt
Source/qpc/ports/win32-qutest/: CMakeLists.txt
Source/qpc/ports/win32-qv/: CMakeLists.txt
Source/qpc/src/: CMakeLists.txt
Source/qpc/src/qf/: CMakeLists.txt
Source/qpc/src/qk/: CMakeLists.txt
Source/qpc/src/qs/: CMakeLists.txt
Source/qpc/src/qv/: CMakeLists.txt
(+87 files in other folders)
